<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <com.victor.dogbreeds.ui.common.BackButton
        android:id="@+id/editProfileBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:button_color="@color/colorAccent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/editProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fontsize_4"
        android:layout_marginTop="@dimen/margin_2"
        android:textColor="@color/colorAccent"

        android:fontFamily="@font/bigswash_regular"

        android:text="@string/editProfile_screenTitle"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/editProfileSignOutButton"

        android:layout_width="30dp"
        android:layout_height="30dp"

        android:src="@drawable/ic_sign_out"

        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_2"

        android:tint="@color/colorAccent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.victor.dogbreeds.ui.common.TextField
        android:id="@+id/editProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/margin_2"

        android:layout_marginTop="@dimen/margin_4"

        android:inputType="textPersonName"
        app:hintText="@string/editProfile_personalNameTextHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileHeader" />

    <com.victor.dogbreeds.ui.common.TextField
        android:id="@+id/editProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/margin_2"

        android:layout_marginTop="@dimen/margin_4"

        android:inputType="textEmailAddress"
        app:hintText="@string/editProfile_emailTextHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileName" />

    <com.victor.dogbreeds.ui.common.TextField
        android:id="@+id/editProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/margin_2"

        android:layout_marginTop="@dimen/margin_4"

        android:inputType="textPassword"
        app:hintText="@string/editProfile_passwordTextHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileEmail" />

    <com.victor.dogbreeds.ui.common.TextField
        android:id="@+id/editProfileBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/margin_2"

        android:layout_marginTop="@dimen/margin_4"

        android:inputType="date"
        app:hintText="@string/editProfile_birthdateTextHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfilePassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfileConfirmButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/button_width"

        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_4"

        android:backgroundTint="@color/colorAccent"

        android:elevation="@dimen/button_elevation"

        android:text="@string/editProfile_confirmTextButton"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/button_radius"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>